--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "vue-tsc": "^0.38"
   },
   "dependencies": {
+    "kumpulan-tools": "^1.0.0",
+    "string-strip-html": "^13.0.2",
     "svelte": "^3.46.5",
     "tiddlywiki": "^5.2.4",
     "vite-plugin-windicss": "^1.8.10",
